updated css file

--- a/pennyPlay.css
+++ b/pennyPlay.css
@@ -12,7 +12,7 @@ p{
     background: linear-gradient(rgba(0, 0, 0, .2), rgba(0, 0, 0, .8), rgba(0, 0, 0, .2));
     background: -webkit-linear-gradient(rgba(0, 0, 0, .2), rgba(0, 0, 0, .8), rgba(0, 0, 0, .2));
 }
-.penny{
+.slot{
     background-color: green;
     padding: 50px;
     margin: 20px;
